# wifi_watchdog

./: .gitignore  QUALITY_NOTES.md  README.md  copilot-instructions.md  pyproject.toml
config/: watchdog.yml
scripts/: install.sh
src/watchdog/: __init__.py  command_runner.py  config.py  connectivity.py  escalation.py  logging_setup.py  main.py  metrics.py  recovery_steps.py  status.py  usb_reset.py
systemd/: wifi-watchdog.service
tests/: test_adaptive_and_history.py  test_config.py  test_escalation.py  test_metrics_rssi.py
